# sw-dev

./: .gitignore  404.html  LICENSE  README.md  files.py  index.html  mk_pdf.sh  mkdocs.yml  objects.inv  pyproject.toml  setup.py
API/bifurcation/: index.html
API/binary/: index.html
API/calculator/: index.html
API/files/: index.html
API/interleave/: index.html
Homework/hwa0/: index.html
Homework/hwa1/: index.html
Homework/hwa10/: index.html
Homework/hwa11/: index.html
Homework/hwa12/: index.html
Homework/hwa2/: index.html
Homework/hwa3/: index.html
Homework/hwa4/: index.html
Homework/hwa5/: index.html
Homework/hwa6/: index.html
Homework/hwa7/: index.html
Homework/hwa8/: index.html
doc/: notes.md
docs/: index.md
docs/API/: bifurcation.md  binary.md  calculator.md  files.md  interleave.md
docs/Homework/: hwa0.md  hwa10.md  hwa11.md  hwa12.md  hwa2.md  hwa3.md  hwa4.md  hwa5.md  hwa6.md  hwa7.md  hwa8.md
scripts/: mk_pdf.sh  progress.md
scripts/hwa0/: binary.py  hwa0.md  hwa0.py  interleave.py
scripts/hwa1/: hwa1.md
scripts/hwa10/: hwa10.py  hwa10.py.lprof
scripts/hwa11/inclass/: ctype_test.py  (+4 more)
scripts/hwa12/: check_prime.py
scripts/hwa2/: binary.py  hwa2.md  plot.py
scripts/hwa3/: find_duplicates.py  hwa3.md  make_files.py
scripts/hwa4/: hwa4.md  make_maps.py  make_maps.py.lprof
scripts/hwa6/: cli.py
scripts/hwa8/: numinter1.puml  numinter2.puml
scripts/hwa9/: buggy.py
src/course_package/: bifurcation.py  binary.py  calculator.py  files.py  interleave.py  reverse.py  utils.py
tests/: calculator_test.py
(+17 files in other folders)
