[project]
name = "course-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Richard Johansson", email = "richard.johansson@irf.se" }
]
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.14",
    "line-profiler>=4.2.0",
    "matplotlib>=3.10.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
    "mpi4py>=4.0.3",
    "python-markdown-math>=0.9",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E2", "E3", "E4", "E7", "E9"]
ignore = []
fixable = ["ALL"]
preview = true
